--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <nav id="navigation">
-        <h1 id= nav-head>Name displayer</h1>
+        <h1 id= nav-head>Name Variation</h1>
     </nav>
 
     <label for="input">Enter your text here</label>
-    <input type="text">
+    <input id="input" type="text">
     
     <table class="table" border="1">
         <th>Variation</th>
@@ -51,5 +51,6 @@
             </tr>
         </tbody>
     </table>
+    <script src="app.js"></script>
 </body>
 </html>
